--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
 	"dependencies": {
 		"nanoid": "^3.1.12",
 		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
 		"webrtc-adapter": "^7.7.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.1",
 		"@babel/preset-env": "^7.11.0",
+		"@babel/preset-react": "^7.10.4",
 		"babel-loader": "^8.1.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"css-loader": "^4.2.1",
