--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 		"html-webpack-plugin": "^4.3.0",
 		"mini-css-extract-plugin": "^0.10.0",
 		"style-loader": "^1.2.1",
+		"svg-inline-loader": "^0.8.2",
+		"svg-url-loader": "^6.0.0",
 		"terser-webpack-plugin": "^4.1.0",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12",
