--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
 	},
 	"homepage": "https://github.com/Kebalepile/videochat-with-WRTC#readme",
 	"dependencies": {
+		"@babel/runtime": "^7.11.2",
 		"nanoid": "^3.1.12",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
+		"socket.io": "^2.3.0",
+		"socket.io-client": "^2.3.0",
 		"webrtc-adapter": "^7.7.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.1",
+		"@babel/plugin-transform-runtime": "^7.11.0",
 		"@babel/preset-env": "^7.11.0",
 		"@babel/preset-react": "^7.10.4",
 		"babel-loader": "^8.1.0",
