--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"svg-inline-loader": "^0.8.2",
 		"svg-url-loader": "^6.0.0",
 		"terser-webpack-plugin": "^4.1.0",
+		"ttf-loader": "^1.0.2",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
